--- a/site/resources/themes/crimson.css
+++ b/site/resources/themes/crimson.css
@@ -24,7 +24,7 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 body {
-  background-color: #880000;
+  background-color: #882829;
   color: #eeeeee;
 }
 a:link,
@@ -36,21 +36,21 @@ a:active {
   color: #ff9999;
 }
 h1 {
-  color: #eeeeee;
+  color: #eb6049;
 }
 h2 {
-  color: #d7302b;
-  border-color: #d7302b;
+  color: #eb6049;
+  border-color: #eb6049;
 }
 h3 {
-  color: #ee4d58;
+  color: #eea61c;
 }
 .banner-title {
-  color: #d7302b;
+  color: #eb6049;
 }
 .chart-title,
 .preview-title {
-  color: #d7302b;
+  color: #eb6049;
 }
 .nav-box,
 .top-box,
@@ -95,7 +95,7 @@ pre > code,
 .info-box-top a:visited,
 .info-box-bottom a:visited,
 .subdued a:visited {
-  color: #b2b251;
+  color: #a2a247;
 }
 .info-box-top a:hover,
 .info-box-bottom a:hover,
@@ -106,10 +106,10 @@ pre > code,
   color: #ff9999;
 }
 .cell-highlight {
-  background-color: #660000;
+  background-color: #651e1e;
 }
 .cell-selected {
-  background-color: #770000;
+  background-color: #702122;
 }
 .caution,
 .warning,
@@ -125,13 +125,16 @@ pre > code,
   color: #6666cc;
 }
 .graph-foreground {
-  background-color: #d7302b;
+  background-color: #eb6049;
 }
 .highlight {
-  color: #88cc88;
+  color: #77cc67;
 }
 .selected {
   color: #ff9999;
+}
+code {
+  color: #eeeeee;
 }
 .quote,
 .quote-inline,
@@ -139,45 +142,46 @@ pre > code,
   color: #ccbbaa;
 }
 .button {
-  background-color: #770000;
+  background-color: #702122;
   border-color: #a66f6f;
-  color: #dddddd;
+  color: #ccbbaa;
 }
 a.button:link,
 a.button:visited {
-  color: #dddddd;
+  color: #ccbbaa;
 }
 .button.selected {
-  background-color: #bb2222;
+  background-color: #942b2d;
   border-color: #a66f6f;
-  color: #eeeeee;
+  color: #ff9999;
 }
 .button.disabled {
-  background-color: #7e0000;
-  border-color: #7c4d4d;
+  background-color: #7c2525;
+  border-color: #8c5656;
   color: #ccbbaa;
 }
 .button:hover:not(.disabled):not(.selected) {
-  background-color: #bb2222;
+  background-color: #942b2d;
+  border-color: #a66f6f;
 }
 ul.menu {
-  background-color: #770000;
+  background-color: #702122;
   border-color: #a66f6f;
 }
 ul.menu .menu-group-title {
-  background-color: #660000;
+  background-color: #651e1e;
   border-color: #a66f6f;
 }
 .menu-item:hover {
-  background-color: #bb2222;
-  border-color: #660000;
+  background-color: #942b2d;
+  border-color: #a66f6f;
 }
 .menu-item-description {
-  color: #eeeeee;
+  color: #ccbbaa;
 }
 .text-control,
 .menu-control {
-  background-color: #770000;
-  color: #eeeeee;
+  background-color: #702122;
+  color: #ccbbaa;
   border-color: #a66f6f;
 }
