--- a/site/resources/themes/eggplant.less
+++ b/site/resources/themes/eggplant.less
@@ -24,33 +24,23 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: #646;
-@body_color: #535;
-@medium_body_color: darken(@body_color, 1%);
-@darker_body_color: #4b254b;
-@darkest_body_color: #424;
+@import "theme-base";
 
-@light_border: #987;
-@medium_border: darken(@light_border, 10%);
-@dark_border: #987;
+@body_color: #535;
+
+@bright_border: #987;
+@stark_border: #987;
 
 @text_color: #EEC;
-@darker_text_color: #CBA;
-@darkest_text_color: #987;
+@dimmest_text_color: #987;
 
 @title_color: #B9B;
-@lighter_title_color: #979;
+@h3_color: #979;
 
 @link_color: #FF9;
-@darker_link_color: darken(@link_color, 10%);
 @link_hover_color: #F99;
 
-@button_text_color: #DDD;
+@control_text_color: @text_color;
 
-@message_box_text_color: #765;
-@message_box_link_color: #66C;
-
-@highlight_color: #8C8;
-@selected_color: #d17b9c;
-
-@import "theme-base";
+@highlighted_text_color: #8C8;
+@selected_text_color: #d17b9c;
