--- a/site/resources/themes/emerald.less
+++ b/site/resources/themes/emerald.less
@@ -24,33 +24,20 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: #4A4;
-@body_color: #050;
-@medium_body_color: darken(@body_color, 1%);
-@darker_body_color: #172;
-@darkest_body_color: #061;
+@import "theme-base";
 
-@light_border: #585;
-@medium_border: darken(@light_border, 10%);
-@dark_border: #9DC584;
+@body_color: #7fb079;
 
-@text_color: #DED;
-@darker_text_color: #9A9;
-@darkest_text_color: #987;
+@bright_border: #585;
+@stark_border: darken(@bright_border, 8%);
 
-@title_color: #9DC584;
-@lighter_title_color: #7D7;
+@text_color: #222;
 
-@link_color: #ADD594;
-@darker_link_color: darken(@link_color, 10%);
+@title_color: #2c6833;
+@h3_color: lighten(@title_color, 5%);
+
+@link_color: #c3e28a;
 @link_hover_color: #ffea62;
 
-@button_text_color: #DDD;
-
-@message_box_text_color: #765;
-@message_box_link_color: #66C;
-
-@highlight_color: #ffba00;
-@selected_color: #b5befd;
-
-@import "theme-base";
+@highlighted_text_color: #ffba00;
+@selected_text_color: #535e8a;
