--- a/site/resources/themes/sea.less
+++ b/site/resources/themes/sea.less
@@ -24,33 +24,20 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: lighten(@body_color, 3%);
+@import "theme-base";
+
+@light_green: #9C6;
+
 @body_color: #294a83;
-@medium_body_color: darken(@body_color, 3%);
-@darker_body_color: darken(@body_color, 6%);
-@darkest_body_color: darken(@body_color, 9%);
 
-@light_border: #7697ce;
-@medium_border: darken(@light_border, 10%);
-@dark_border: darken(@light_border, 20%);
+@text_color: #DDD;
+@highlighted_text_color: yellow;
+@selected_text_color: @light_green;
 
-@text_color: #CCC;
-@darker_text_color: darken(@text_color, 10%);
-@darkest_text_color: darken(@text_color, 20%);
-
-@title_color: #79a251;
-@lighter_title_color: lighten(@title_color, 20%);
+@title_color: @light_green;
+@h3_color: lighten(@title_color, 20%);
 
 @link_color: #4C9CD9;
-@darker_link_color: darken(@link_color, 15%);
-@link_hover_color: #9C6;
+@link_hover_color: @light_green;
 
-@button_text_color: @darker_text_color;
-
-@message_box_text_color: #765;
-@message_box_link_color: #66C;
-
-@highlight_color: #FFFF00;
-@selected_color: #99CC66;
-
-@import "theme-base";
+@bright_border: #7697ce;
