--- a/site/resources/themes/shale.less
+++ b/site/resources/themes/shale.less
@@ -24,33 +24,33 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: #5e667b;
-@body_color: #4A525A;
-@medium_body_color: darken(@body_color, 1%);
-@darker_body_color: #434C56;
-@darkest_body_color: #394149;
+@import "theme-base";
 
-@light_border: #999;
-@medium_border: darken(@light_border, 10%);
-@dark_border: #666;
+@control_hover_background_color: #5e667b;
+@body_color: #4A525A;
+@disabled_control_background_color: darken(@body_color, 1%);
+@control_background_color: #434C56;
+@accent_background_color: #394149;
+
+@bright_border: #999;
+@medium_border: darken(@bright_border, 10%);
+@stark_border: #666;
 
 @text_color: #CCC;
-@darker_text_color: #AAA;
-@darkest_text_color: #888;
+@dimmer_text_color: #AAA;
+@dimmest_text_color: #888;
 
 @title_color: #CCC;
-@lighter_title_color: #c7d9ff;
+@h3_color: #c7d9ff;
 
 @link_color: white;
-@darker_link_color: #CCC;
+@dimmer_link_color: #CCC;
 @link_hover_color: yellow;
 
-@button_text_color: #DDD;
+@control_text_color: #DDD;
 
 @message_box_text_color: #765;
 @message_box_link_color: #66C;
 
-@highlight_color: #8C8;
-@selected_color: #a1c9ff;
-
-@import "theme-base";
+@highlighted_text_color: #8C8;
+@selected_text_color: #a1c9ff;
