--- a/site/resources/themes/steel.less
+++ b/site/resources/themes/steel.less
@@ -24,33 +24,33 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@lighter_body_color: #adc4e3;
-@body_color: #9AAECA;
-@medium_body_color: darken(@body_color, 4%);
-@darker_body_color: #8A9EBA;
-@darkest_body_color: #AABEDA;
+@import "theme-base";
 
-@light_border: #b2c5e0;
-@medium_border: darken(@light_border, 10%);
-@dark_border: #1A2E4A;
+@control_hover_background_color: #adc4e3;
+@body_color: #9AAECA;
+@disabled_control_background_color: darken(@body_color, 4%);
+@control_background_color: #8A9EBA;
+@accent_background_color: #AABEDA;
+
+@bright_border: #b2c5e0;
+@medium_border: darken(@bright_border, 10%);
+@stark_border: #1A2E4A;
 
 @text_color: #222;
-@darker_text_color: #1A2E4A;
-@darkest_text_color: #2c3a6a;
+@dimmer_text_color: #1A2E4A;
+@dimmest_text_color: #2c3a6a;
 
 @title_color: #2d5080;
-@lighter_title_color: #3864a1;
+@h3_color: #3864a1;
 
 @link_color: #FFD;
-@darker_link_color: #4A5E9A;
+@dimmer_link_color: #4A5E9A;
 @link_hover_color: yellow;
 
-@button_text_color: #444;
+@control_text_color: #444;
 
 @message_box_text_color: #765;
 @message_box_link_color: #66C;
 
-@highlight_color: #944e9d;
-@selected_color: #3f6578;
-
-@import "theme-base";
+@highlighted_text_color: #944e9d;
+@selected_text_color: #3f6578;
