--- a/site/resources/themes/blue_tan.css
+++ b/site/resources/themes/blue_tan.css
@@ -23,175 +23,188 @@ For more information about the earthli WebCore, visit:
 http://www.earthli.com/software/webcore
 
 ****************************************************************************/
-
-body
-{
-  background-color: white;
-  color: black;
+body {
+  background-color: #ffffff;
+  color: #222255;
 }
-
-.banner, .footer
-{
-  border-style: solid;
-  border-color: #333333;
-  border-width: 0px;
-  background-color: #336699;
-  color: white;
-}
-
-.banner
-{
-  border-bottom-width: 2px;
-}
-
-.footer
-{
-  border-top-width: 2px;
-}
-
-.footer a:link, .footer a:visited, .banner a:link, .banner a:visited
-{
-  color: #CCCC99;
-}
-
-.footer a:hover, .footer a:active, .banner a:hover, .banner a:active
-{
-  color: #CCFF99;
-}
-
-.nav-box
-{
-  border: 0px;
-}
-
-.main-box
-{
-  border: none;
-  background-color: #FFFFFF;
-}
-
-.chart-title
-{
-  margin-left: -15px;
-  padding-left: 15px;
-  color: #336699;
-  border-bottom: 1px dotted #999999;
-}
-
-.side-bar, .chart, .preview
-{
-  border: 1px solid #999999;
-}
-
-.menu-bar-bottom
-{
-  border-top: 1px dotted #999999;
-}
-
-.menu-bar-top
-{
-  border-bottom: 1px dotted #999999;
-}
-
-.menu
-{
-  border: 1px dotted #999999;
-}
-
-.menu-item
-{
-  border-top: 1px solid white;
-  border-bottom: 1px solid white;
-}
-
-.menu-item:hover
-{
-  background: #EEEEEE;
-  border-top: 1px dotted #999999;
-  border-bottom: 1px dotted #999999;
-}
-
-.cell-non-empty
-{
-  border-color: #dedebd;
-}
-
-.cell-selected, .cell-highlight
-{
-  background-color: #F8F8F8;
-  border-color: #dedebd;
-}
-
-a:link, a:visited
-{
+a:link,
+a:visited {
   color: #999966;
 }
-
-a:hover, a:active
-{
-  color: #99CC66;
+a:hover,
+a:active {
+  color: #99cc66;
 }
-
-h2
-{
+h1 {
   color: #336699;
-  border-bottom: 1px dotted #999999;
-  padding-left: 3px;
 }
-
-h3
-{
-  color: #666666;
+h2 {
+  color: #336699;
+  border-color: #336699;
 }
-
-h4
-{
-  color: #999999;
+h3 {
+  color: #336699;
 }
-
-.excerpt
-{
-  color: #666666;
+h4 {
+  color: #336699;
 }
-
-.frame
-{
+.banner-title {
+  color: #336699;
+}
+.chart-title,
+.preview-title {
+  color: #336699;
+}
+.nav-box,
+.top-box,
+.footer,
+.horizontal-separator,
+.vertical-separator,
+.left-sidebar,
+.right-sidebar,
+.object-in-list,
+.info-box-top,
+.info-box-bottom,
+.cell-selected,
+.cell-highlight,
+.description-box {
+  border-color: #cccccc;
+}
+table.columns > tbody > tr > td,
+table.columns > tbody > tr > th,
+.quote-block,
+.preview,
+.chart,
+pre > code,
+.form-basic-block,
+.abstract,
+.cell-non-empty,
+.pullquote {
   border-color: #999999;
 }
-
-.graph-foreground
-{
-  background-color: #CCCC99;
+.object-navigator .links {
+  column-rule-color: #cccccc;
+  -webkit-column-rule-color: #cccccc;
+  -moz-column-rule-color: #cccccc;
 }
-
-.graph-background
-{
+.info-box-top,
+.info-box-bottom,
+.subdued {
+  color: #3f3f9e;
+}
+.info-box-top a:link,
+.info-box-bottom a:link,
+.subdued a:link,
+.info-box-top a:visited,
+.info-box-bottom a:visited,
+.subdued a:visited {
+  color: #6b6b47;
+}
+.info-box-top a:hover,
+.info-box-bottom a:hover,
+.subdued a:hover,
+.info-box-top a:active,
+.info-box-bottom a:active,
+.subdued a:active {
+  color: #99cc66;
+}
+.cell-highlight {
+  background-color: #e8e8e8;
+}
+.cell-selected {
+  background-color: #f0f0f0;
+}
+.caution,
+.warning,
+.error {
+  color: #776655;
+}
+.caution a:link,
+.caution a:visited,
+.warning a:link,
+.warning a:visited,
+.error a:link,
+.error a:visited {
+  color: #6666cc;
+}
+.graph-foreground {
   background-color: #336699;
 }
-
-.highlight
-{
-  color: #00AA00;
+.highlight {
+  color: #00aa00;
 }
-
-.vertical-separator, .horizontal-separator
-{
-  border-color: #999999;
+.selected {
+  color: #375daf;
 }
-
-.quote-inline, .quote-block, .quote
-{
-  color: #666666;
+code {
+  color: #222255;
 }
-
-.quote-block
-{
-  padding: .5em;
-  border: 1px dotted #999999;
+.quote,
+.quote-inline,
+.quote-block {
+  color: #313179;
 }
-
-.text-control, .menu-control
-{
-  color: #336699;
-  border: 1px solid #999999;
+.button {
+  background-color: #f0f0f0;
+  border-color: #cccccc;
+  color: #313179;
+}
+a.button:link,
+a.button:visited {
+  color: #313179;
+}
+.button.selected {
+  background-color: #ffffff;
+  border-color: #cccccc;
+  color: #375daf;
+}
+.button.disabled {
+  background-color: #f7f7f7;
+  border-color: #b3b3b3;
+  color: #313179;
+}
+.button:hover:not(.disabled):not(.selected) {
+  background-color: #ffffff;
+  border-color: #cccccc;
+}
+ul.menu {
+  background-color: #f0f0f0;
+  border-color: #cccccc;
+}
+ul.menu .menu-group-title {
+  background-color: #e8e8e8;
+  border-color: #cccccc;
+}
+.menu-item:hover {
+  background-color: #ffffff;
+  border-color: #cccccc;
+}
+.menu-item-description {
+  color: #313179;
+}
+.text-control,
+.menu-control {
+  background-color: #f0f0f0;
+  color: #313179;
+  border-color: #cccccc;
+}
+.banner,
+.footer {
+  background-color: #336699;
+  color: #ffffff;
+}
+.banner a:link,
+.footer a:link,
+.banner a:visited,
+.footer a:visited {
+  color: #CC9;
+}
+.banner a:hover,
+.footer a:hover,
+.banner a:active,
+.footer a:active {
+  color: #CF9;
+}
+.footer {
+  padding-bottom: 5px;
 }
